<resources>
    <string name="app_name">Tripping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">"Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Click here to sign Up!</string>
    <string name="contact">Contact Number</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="car">Car Details</string>
    <string name="car_color">Car Color</string>
    <string name="registration_no">Registration Number</string>
    <string name="update">Update</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="seats_available">Seats Available</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="car_brand_name">Car Brand</string>
    <string name="home_address">Home Address</string>
    <string name="work_address">Work Address</string>
    <string name="car_model_name">Car Model</string>
    <string name="car_number_plate">Registration Number</string>
    <string name="back">Back</string>
    <string name="join">Join</string>
    <string name="update_trip">Update</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="color">Color</string>
    <string name="posted_by">Posted By</string>
    <string name="time">Start Time</string>
    <string name="date">Start Date</string>
    <string name="people_in_the_ride">Fellow Riders</string>
    <string name="rideHistoryTitle">Ride History Details</string>
    <string name="updateRideTitle">Update Ride Details</string>
    <string name="tripDetailsTitle">Trip Details</string>
    <string name="homeScreen">Pool In</string>
    <string name="home">Home</string>
    <string name="signUpTitle">Register User</string>
    <string name="user">User Details</string>
    <string name="action_info">Search</string>
    <string name="app_info">This app is designed for users looking for new exciting places to visit and users who want to share their experiences</string>
    <string name="searchByLocation">Search</string>
    <string name="fromStreet">From Street</string>
    <string name="fromNeighborhood">Neighborhood</string>
    <string name="fromPinCode">Pincode</string>
    <string name="toStreet">To Street</string>
    <string name="toNeighborhood">Neighborhood</string>
    <string name="toPinCode">Pincode</string>
    <string name="add_trip">Add Place</string>
    <string name="my_trips">My Places</string>
    <string name="log_out">Log Out</string>
    <string name="image">Image</string>
    <string name="name_text">Name:</string>
    <string name="contact_text">Contact:</string>
    <string name="status_text">Status:</string>
    <string name="date_text">Date:</string>
    <string name="time_text">Time:</string>
    <string name="userName">Username</string>
    <string name="placeTitle">Title</string>
    <string name="placeCity">City</string>
    <string name="select_image">Select Image</string>
    <string name="placeDescription">Description</string>

    <string name="radio_visible">true</string>
    <string name="radio_invisible">false</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Add Trip</item>
        <item>My Trips</item>
        <item>My Profile</item>
        <item>About</item>
    </string-array>

    <string-array name="filter_items">
        <item>Start_Time_asc</item>
        <item>Start_Time_desc</item>
        <item>No_of_Seats_asc</item>
        <item>No_of_Seats_desc</item>
    </string-array>

    <string-array name="catergory_array">
        <item>Adventure</item>
        <item>Leisure</item>
        <item>Scenic</item>
        <item>Entertainment</item>
        <item>Hotels</item>
        <item>Resturants</item>
        <item>Road Trip</item>
        <item>Photography</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keyword">Search Keyword</string>
    <string name="search">Search</string>
    <string name="about">About App</string>
    <string name="placeLocation">Location</string>
</resources>
