<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:background="@null"
    android:scrollbars="horizontal">
    <RelativeLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_user_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:fitsSystemWindows="true"
            tools:context=".fragment.UpdateProfileFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/updateEmailAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/updateContactTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/updateFirstNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="13sp"
                        android:padding="4dp"
                        android:textColor="@android:color/black"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/updateLastNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="13sp"
                        android:padding="4dp"
                        android:textColor="@android:color/black"
                        android:layout_weight="1"/>

                </LinearLayout>
                <TextView
                    android:id="@+id/updateHomeAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/updateWorkAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/work_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/updateCarBrandTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_brand_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/updateCarModelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_model_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/updateCarColorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_color"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/updateCarNumberPlateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_number_plate"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:padding="4dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/back"
                    tools:ignore="ButtonStyle"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/update_user_profile_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/update_trip"
                    tools:ignore="ButtonStyle"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
