<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:scrollbars="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/ten_dp">

            <EditText
                android:id="@+id/placeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#f0f0f4"
                android:ems="10"
                android:hint="@string/placeTitle"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:textColor="#000" />

            <AutoCompleteTextView
                android:id="@+id/placeSearch"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#f0f0f4"
                android:ems="10"
                android:hint="Search"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:textColor="#000"
                android:imeOptions="actionSearch"/>

            <!--EditText
                android:id="@+id/placeCity"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#f0f0f4"
                android:ems="10"
                android:hint="@string/placeCity"
                android:inputType="textCapWords"
                android:nextFocusForward="@id/placePincode"
                android:nextFocusRight="@id/placePincode"
                android:padding="5dp"
                android:textColor="#000" />

            <EditText
                android:id="@+id/placePincode"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#f0f0f4"
                android:ems="10"
                android:hint="@string/fromPinCode"
                android:inputType="number"
                android:nextFocusForward="@id/placeDescription"
                android:nextFocusRight="@id/placeDescription"
                android:padding="5dp"
                android:textColor="#000" /-->

        </LinearLayout>
        <EditText
            android:id="@+id/placeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#f0f0f4"
            android:ems="10"
            android:hint="@string/placeDescription"
            android:inputType="textCapWords"
            android:nextFocusForward="@id/add_trip_image_button"
            android:nextFocusRight="@id/add_trip_image_button"
            android:padding="5dp"
            android:textColor="#000"
            android:maxLines="10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placeImage"
                android:src="@drawable/ic_action_home"
                android:layout_margin="10dp"
                android:layout_weight="0.9"
                />

            <Button
                android:id="@+id/add_trip_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:backgroundTint="@color/colorPrimary"
                android:nextFocusForward="@id/add_trip_submit"
                android:nextFocusRight="@id/add_trip_submit"
                android:text="@string/select_image"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_trip_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:layout_weight="1"
                android:text="@string/reset"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/add_trip_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:text="@string/submit"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
